feat(*): make app responsive

--- a/src/bubble-input.css
+++ b/src/bubble-input.css
@@ -14,7 +14,7 @@
 .bubble.input > div {
   border: none;
   outline: none;
-  background-color: #eee;
-  font-size: 32px;
+  background-color: #eeeeee;
+  font-size: 2rem;
   min-width: 30px;
 }
